src/catpiler/frontend/parser/Parser.java
/*
 * Parser.java Copyright (C) 2010 Stephanie Stroka 
 * 
 * This library is free software; you can redistribute it and/or modify it under 
 * the terms of the GNU Lesser General Public License as published by the 
 * Free Software Foundation; either version 2.1 of the License, or (at your option) 
 * any later version. 
 * 
 * This library is distributed in the hope that it will be useful, 
 * but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or 
 * FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for 
 * more details. 
 * 
 * You should have received a copy of the GNU Lesser General Public License along 
 * with this library; if not, write to the Free Software Foundation, Inc., 59 
 * Temple Place, Suite 330, Boston, MA 02111-1307 USA 
 */
package catpiler.frontend.parser;

import java.io.File;
import java.io.FileNotFoundException;
import java.util.ArrayList;
import java.util.HashMap;
import java.util.HashSet;
import java.util.Set;

import catpiler.backend.codegeneration.CodeGenerator;
import catpiler.backend.codegeneration.MemoryManager;
import catpiler.backend.linker.Linker;
import catpiler.frontend.exception.ParseException;
import catpiler.frontend.exception.SyntaxException;
import catpiler.frontend.parser.lib.ExtractFileHeader;
import catpiler.frontend.parser.symboltable.Symboltable;
import catpiler.frontend.parser.symboltable.SymboltableEntry;
import catpiler.frontend.parser.symboltable.TypeItem;
import catpiler.frontend.scanner.Scanner;
import catpiler.frontend.scanner.keywords.A;
import catpiler.frontend.scanner.keywords.ALL;
import catpiler.frontend.scanner.keywords.AN;
import catpiler.frontend.scanner.keywords.ANY;
import catpiler.frontend.scanner.keywords.ArrayAccessOp;
import catpiler.frontend.scanner.keywords.BIGGR;
import catpiler.frontend.scanner.keywords.BOTH;
import catpiler.frontend.scanner.keywords.CAN;
import catpiler.frontend.scanner.keywords.CHAR;
import catpiler.frontend.scanner.keywords.CHARZ;
import catpiler.frontend.scanner.keywords.DIFF;
import catpiler.frontend.scanner.keywords.DIFFRINT;
import catpiler.frontend.scanner.keywords.DOWANT;
import catpiler.frontend.scanner.keywords.DUZ;
import catpiler.frontend.scanner.keywords.DerefOperator;
import catpiler.frontend.scanner.keywords.EITHER;
import catpiler.frontend.scanner.keywords.FAIL;
import catpiler.frontend.scanner.keywords.FOUND;
import catpiler.frontend.scanner.keywords.GIMMEH;
import catpiler.frontend.scanner.keywords.GTFO;
import catpiler.frontend.scanner.keywords.HAI;
import catpiler.frontend.scanner.keywords.HAS;
import catpiler.frontend.scanner.keywords.HOW;
import catpiler.frontend.scanner.keywords.I;
import catpiler.frontend.scanner.keywords.IF;
import catpiler.frontend.scanner.keywords.IM;
import catpiler.frontend.scanner.keywords.IN;
import catpiler.frontend.scanner.keywords.IS;
import catpiler.frontend.scanner.keywords.Identifier;
import catpiler.frontend.scanner.keywords.Int;
import catpiler.frontend.scanner.keywords.KTHXBYE;
import catpiler.frontend.scanner.keywords.Keyword;
import catpiler.frontend.scanner.keywords.MEBBE;
import catpiler.frontend.scanner.keywords.MKAY;
import catpiler.frontend.scanner.keywords.NO;
import catpiler.frontend.scanner.keywords.NOOB;
import catpiler.frontend.scanner.keywords.NOT;
import catpiler.frontend.scanner.keywords.NOW;
import catpiler.frontend.scanner.keywords.NUMBR;
import catpiler.frontend.scanner.keywords.NUMBRZ;
import catpiler.frontend.scanner.keywords.OF;
import catpiler.frontend.scanner.keywords.OIC;
import catpiler.frontend.scanner.keywords.ORLY;
import catpiler.frontend.scanner.keywords.OUTTA;
import catpiler.frontend.scanner.keywords.PRODUKT;
import catpiler.frontend.scanner.keywords.QUOSHUNT;
import catpiler.frontend.scanner.keywords.QuestionMark;
import catpiler.frontend.scanner.keywords.R;
import catpiler.frontend.scanner.keywords.RLY;
import catpiler.frontend.scanner.keywords.SAEM;
import catpiler.frontend.scanner.keywords.SAY;
import catpiler.frontend.scanner.keywords.SMALLR;
import catpiler.frontend.scanner.keywords.SO;
import catpiler.frontend.scanner.keywords.STUFF;
import catpiler.frontend.scanner.keywords.SUM;
import catpiler.frontend.scanner.keywords.String;
import catpiler.frontend.scanner.keywords.THATSIT;
import catpiler.frontend.scanner.keywords.TIL;
import catpiler.frontend.scanner.keywords.TROOF;
import catpiler.frontend.scanner.keywords.TROOFZ;
import catpiler.frontend.scanner.keywords.U;
import catpiler.frontend.scanner.keywords.VISIBLE;
import catpiler.frontend.scanner.keywords.WAI;
import catpiler.frontend.scanner.keywords.WILE;
import catpiler.frontend.scanner.keywords.WIN;
import catpiler.frontend.scanner.keywords.YA;
import catpiler.frontend.scanner.keywords.YOU;
import catpiler.frontend.scanner.keywords.YR;
import catpiler.utils.ErrorReporter;
import catpiler.utils.StringLib;

/**
 * The Parser checks whether the program follows
 * the specified EBNF.
 * This is a recursive descendant parser, which means that
 * it starts with the non-terminal start symbol and works
 * his way recursively down to the terminal symbols of the 
 * program.
 * 
 * @author Stephanie Stroka
 * 			(stephanie.stroka@sbg.ac.at)
 *
 */
public class Parser {
	
	// junit test need scanner to be public
	public Scanner s = null;
	
	int tmpSrcPointer = 0;
	
	// hack :(
	int tmpSrcPointer2 = 0;
	
	public boolean parseTest = false;

	private Symboltable symboltable;
	
	private CodeGenerator codeGenerator;
	
	private MemoryManager memoryManager;
	
	private int loadStmt;
	
	private boolean inFlowControl;
	
	private boolean inStruct;
	
	private int structOffset;
	
	private static boolean separateCompile;
	
	public static HashSet<java.lang.String> modules;
	
	public java.lang.String currentPath;
	
	public java.lang.String currentModule;
	
	private ExtractFileHeader extractFileHeader;
	
	private void init() {
		memoryManager = new MemoryManager(codeGenerator);
		if(symboltable == null) symboltable = new Symboltable("global", null);
		symboltable.setLevel(0);
		SymboltableEntry it = new SymboltableEntry();
		it.setName("IT");
		it.setCategory("reg");
		it.setType(NOOB.tokenId);
		it.setReg("$v1");
		symboltable.put(it);
		loadStmt = 0;
		inFlowControl = false;
		extractFileHeader = new ExtractFileHeader();
		modules = new HashSet<java.lang.String>();
	}
	
	public Parser() {
		codeGenerator = new CodeGenerator(null);
		init();
	}
	
	public Parser(java.lang.String filename) {
		java.lang.String outputName = filename.replace(".lol", ".cat");
		codeGenerator = new CodeGenerator(outputName);
		init();
	}
	
	public SymboltableEntry currentSymboltableEntry;
	
	/**
	 * Checks whether the keyword-token indicates the start of
	 * a module-call <<CAN HAS identifier>>
	 * 
	 * @param keyword
	 * @return
	 * @throws ParseException
	 */
	public boolean isModuleImport(Keyword keyword) throws ParseException {
		if(keyword instanceof CAN) {
			if(lookAhead() instanceof HAS) {
				adjustSrcPointer();
				Keyword moduleKeyword = lookAhead();
				if(moduleKeyword instanceof Identifier) {
					adjustSrcPointer();
				} else {
					ErrorReporter.markError("Missing module");
				}
				
				if(!separateCompile) {
					Parser.loadSourcecode(currentPath + moduleKeyword.getAttribute() + ".lol");
				}
				
			} else {
				ErrorReporter.markError("Missing 'HAS' keyword");
			}
			return true;
		} else {
			return false;
		}
	}
	
	/**
	 * Checks whether the keyword-token indicates the start of 
	 * a structure definition <<STUFF label ... THATSIT>>
	 * 
	 * @param keyword
	 * @return
	 * @throws ParseException
	 */
	public boolean isStruct(Keyword keyword) throws ParseException {
		if(keyword instanceof STUFF) {
			TypeItem type = new TypeItem();
			Keyword id = lookAhead();
			if(!isIdentifier(id)) {
				ErrorReporter.markError("Missing structure label after 'STUFF'");
			} else {
				adjustSrcPointer();
				// TODO add it to the list of types
				type.setName(id.getAttribute());
				symboltable.put(type);
			}
			
			int lastLvl = symboltable.getLevel();
			symboltable = new Symboltable(id.getAttribute(), symboltable);
			symboltable.setLevel(lastLvl+1);
			
			Keyword next = null;
			inStruct = true;
			while(isVarInit(next = s.lookupToken()) || 
					isVarDecl(next));
			if(!(next instanceof THATSIT)) {
				ErrorReporter.markError("Missing 'THATSIT' keyword");
			}
			inStruct = false;
			// store the size of the record in another global data label
			type.setSize(structOffset);
			codeGenerator.storeData(id.getAttribute(), ".byte", new Integer(structOffset).toString());
			
			Set<java.lang.String> registers = symboltable.getRegInScopeLevel();
			for(java.lang.String r : registers) {
				codeGenerator.releaseRegister(r);
			}
			codeGenerator.nft = codeGenerator.nft - registers.size();
			type.setSymbolTable(symboltable);
			symboltable = symboltable.getOutterTable();
			return true;
		} else {
			return false;
		}
	}
	
	/**
	 * Checks whether the keyword-token indicates the start 
	 * of a variable initialization <<I HAS A identifier>>
	 * 
	 * @param keyword
	 * @return
	 * @throws ParseException
	 */
	public boolean isVarInit(Keyword keyword) throws ParseException {
		if(keyword instanceof I) {
			if(!(lookAhead() instanceof HAS)) {
				ErrorReporter.markError("Missing 'HAS' keyword");
			} else {
				adjustSrcPointer();
			}
			if(!(lookAhead() instanceof A)) {
				ErrorReporter.markError("Missing 'A' keyword");
			} else {
				adjustSrcPointer();
			}
			Keyword id = lookAhead();
			if(!(id instanceof Identifier)) {
				ErrorReporter.markError("Missing variable");
			} else {
				adjustSrcPointer();
				if(symboltable == null) {
					symboltable = new Symboltable("main", null);
					System.out.println("THIS SHOULD NEVER HAPPEN!!");
				}

				if(symboltable.get(id.getAttribute()) != null) {
					ErrorReporter.markError("Variable " + id.getAttribute() + 
							" has already been defined");
				} else {
					// found global variables -> stored in global .data segment
					if(symboltable.getGlobalTable().equals(symboltable)) {
						SymboltableEntry entry = new SymboltableEntry();
						entry.setName(id.getAttribute());
						entry.setType(NOOB.tokenId);
						entry.setCategory("var");
						entry.setAddress(id.getAttribute());
					} else {
						SymboltableEntry entry = new SymboltableEntry();
						entry.setName(id.getAttribute());
						entry.setType(NOOB.tokenId);
						entry.setCategory("var");
						if(!inStruct) {
							/* I do not know the size for undefined types...
							 * therefore I'll just create 1 word for a pointer 
							 * (which then points to the actual data) */
							int addr = new Integer(codeGenerator.getFp());
							// set address relative to frame pointer
							entry.setAddress(new Integer(codeGenerator.getSp() - addr).toString());
							codeGenerator.decreaseSp(4);
						} else {
							// if we are currently defining a structure, the label gets 
							// stored together with the memory offset in the global data segment
							int addr = new Integer(codeGenerator.getFp());
							entry.setAddress(new Integer(codeGenerator.getSp() - addr).toString());
//							codeGenerator.decreaseSp(4);
							codeGenerator.storeData(symboltable.getName()+"."+id.getAttribute(), 
									".word", new Integer(structOffset).toString());
							structOffset = structOffset + 4;
							entry.setAddress(symboltable.getName()+"."+id.getAttribute());
						}
						symboltable.put(entry);
					}
				}
			}
			return true;
		} else {
			return false;
		}
	}
	
	/**
	 * Checks whether the whole program follows
	 * the specified EBNF structure
	 * The program may either start with a module-import,
	 * a structure definition or directly with the main program.
	 * 
	 * @param keyword
	 * @return
	 * @throws ParseException
	 */
	public boolean isProgram(Keyword keyword) throws ParseException {
		Keyword k = keyword;
		while(isModuleImport(k)) {
			k = s.lookupToken();
		}
		while(isStruct(k)) {
			k = s.lookupToken();
		}

		
		while(isVarInit(k) || isVarDecl(k)) {
			k = s.lookupToken();
		}
		if(isMain(k)) {
			k = s.lookupToken();
		} 
		while(isFunction(k))
			k = s.lookupToken();
		
		return true;
	}
	
	/**
	 * Checks the consistency of the main part of the
	 * program <<HAI ... KTHXBYE>>
	 * 
	 * @param keyword
	 * @return
	 * @throws SyntaxException
	 * @throws ParseException
	 */
	public boolean isMain(Keyword keyword) throws ParseException {
		if(keyword instanceof HAI) {
			
			int lastLvl = symboltable.getLevel();
			symboltable = new Symboltable("main", symboltable);
			symboltable.setLevel(lastLvl+1);
			codeGenerator.put("main: ");
			codeGenerator.setFPisSP();
			
			Keyword next = null;
			while(isStatement(next = s.lookupToken()));
			if(!(next instanceof KTHXBYE)) {
				ErrorReporter.markError("Missing 'KTHXBYE' keyword");
			}
			
			codeGenerator.setSPisFP();
			// exit syscall:
			codeGenerator.put("addi", "$v0", "$zero", "10");
			codeGenerator.put("syscall");
			
			Set<java.lang.String> registers = symboltable.getRegInScopeLevel();
			for(java.lang.String r : registers) {
				codeGenerator.releaseRegister(r);
			}
			codeGenerator.nft = codeGenerator.nft - registers.size();
			symboltable = symboltable.getOutterTable();
			return true;
		} else {
			return false;
		}
	}

	/**
	 * Checks whether the keyword-token indicates the 
	 * start of a statement.
	 * 
	 * @param keyword
	 * @return
	 * @throws SyntaxException
	 * @throws ParseException
	 */
	public boolean isStatement(Keyword keyword) throws ParseException {
		if(isVarInit(keyword)) {
			return true;
		} else if(isVarDecl(keyword)) {
			return true;
		} else if(isVarAssign(keyword)) {
			return true;
		} else if(isPrint(keyword)) {
			return true;
		} else if(isGetline(keyword)) {
			return true;
		} else if(isFlowControl(keyword)) {
			return true;
		} else if(isOperation(keyword)) {
			return true;
		} else if(isExpr(keyword)) {
			return true;
		} else if(isFuncCall(keyword)) {
			return true;
		} else {
			// search for the next known source keyword
			if(!(keyword instanceof KTHXBYE || 
					keyword instanceof FOUND ||
					keyword instanceof GTFO ||
					keyword instanceof HOW ||
					keyword instanceof OIC ||
					keyword instanceof IF ||
					keyword instanceof NO ||
					keyword instanceof MEBBE ||
					keyword instanceof IM)) {
				isStatement(s.lookupToken());
			}
			return false;
		}
	}

	/**
	 * Checks whether the given keyword-token indicates 
	 * a function call
	 * 
	 * @param keyword
	 * @return
	 * @throws SyntaxException
	 * @throws ParseException
	 */
	public boolean isFuncCall(Keyword keyword) throws ParseException {
		if(keyword instanceof CAN) {
			if(lookAhead() instanceof U) {
				adjustSrcPointer();
				
				Keyword funcId = lookAhead();
				if(!isIdentifier(funcId)) {
					ErrorReporter.markError("Expected function name after 'CAN U' keyword");
				}
				adjustSrcPointer();
				
				Keyword k = s.lookupToken();
				
				StringBuilder argTypes = new StringBuilder();
				ArrayList<SymboltableEntry> heapRef = new ArrayList<SymboltableEntry>();
				
				while(isOperation(k)) {
					codeGenerator.clearArgs();
					
					k = s.lookupToken();
					if(currentSymboltableEntry == null) {
						currentSymboltableEntry = symboltable.get("IT");
					}
					
					if(currentSymboltableEntry.getCategory().equals("heap") && 
							currentSymboltableEntry.getLevel() != 0) {
						heapRef.add(currentSymboltableEntry);
						memoryManager.increaseReferenceCount(
								currentSymboltableEntry.getHeap(), 
								currentSymboltableEntry.getHeapsize());
					}
					/* store arguments in $a0 - $a3 */
					if(currentSymboltableEntry.getCategory().equals("reg") && 
							currentSymboltableEntry.getHeap() == null) {
						codeGenerator.move2Args(currentSymboltableEntry.getReg());
					} else if(currentSymboltableEntry.getHeap() != null) {
						// again some hacking ... no time to think about something clever
						java.lang.String reg = codeGenerator.loadAddress(currentSymboltableEntry.getHeap());
						codeGenerator.move2Args(reg);
					} else if(currentSymboltableEntry.getCategory().equals("const")) {
						if(currentSymboltableEntry.getType().equals(NUMBR.tokenId)) {
							java.lang.String reg = codeGenerator.loadImmediately(
									currentSymboltableEntry.getAttribute());
							codeGenerator.move2Args(reg);
						} else if(currentSymboltableEntry.getType().equals(CHARZ.tokenId)) {
							StringLib.storeString(currentSymboltableEntry);
							heapRef.add(currentSymboltableEntry);
							memoryManager.increaseReferenceCount(
									currentSymboltableEntry.getHeap(), 
									currentSymboltableEntry.getHeapsize());
							codeGenerator.move2Args(currentSymboltableEntry.getReg());
						}
					} else if(currentSymboltableEntry.getCategory().equals("var")) {
						java.lang.String reg = codeGenerator.loadWord(
								currentSymboltableEntry.getAddress());
						codeGenerator.move2Args(reg);
					}
					argTypes.append(" ");
					argTypes.append(currentSymboltableEntry.getType());
				}
				
				if(!(k instanceof QuestionMark)) {
					ErrorReporter.markError("Expected '?' after function declaration");
				}
				
				// linker must check whether function exists or not
				codeGenerator.getFunctionCalls().add(funcId.getAttribute() + argTypes);
				
				/* combines one register with one stack-address */
				HashMap<java.lang.String, java.lang.String> saveRegister = 
					new HashMap<java.lang.String, java.lang.String>();
				
				if(!symboltable.getName().equals("main")) {
					
					// save $s0 - $s7 on the stack
					for(int i=0; i<8; i++) {
						java.lang.String address = new java.lang.String();
						int addr = new Integer(codeGenerator.getFp());
//						// set address relative to frame pointer
						address = new Integer(codeGenerator.getSp() - addr).toString();
						codeGenerator.decreaseSp(4);
						codeGenerator.put("sw", "$s"+i, address + "($fp)");
						saveRegister.put("$s"+i, address);
					}
				}
				
				/* combines one temporary register with one saver register */
				HashMap<java.lang.String, SymboltableEntry> tmpRegister = 
					new HashMap<java.lang.String, SymboltableEntry>();
				
				// save current symboltable entries in $s0 - $s7
				codeGenerator.clearSavers();
				Symboltable tmpTable = symboltable;
				Symboltable globaleTable = symboltable.getGlobalTable();
				while(tmpTable != globaleTable) {
					for(java.lang.String var : tmpTable.getHashEntry().keySet()) {
						SymboltableEntry ste = tmpTable.get(var);
						if(ste.getCategory().equals("reg") && !ste.getName().equals("IT")) {
							java.lang.String saver = codeGenerator.move2Savers(ste.getReg());
							tmpRegister.put(ste.getReg(), ste);
							codeGenerator.releaseRegister(ste.getReg());
							ste.setReg(saver);
						}
					}
					tmpTable = tmpTable.getOutterTable();
				}
				
				// store return address in saver register
				codeGenerator.put("move", "$s7", "$ra");
				// store last frame pointer in saver register
				codeGenerator.put("move", "$s6", "$fp");
				
				// call function
				codeGenerator.put("jal", funcId.getAttribute());
				
				// restore frame pointer
				codeGenerator.put("move", "$fp", "$s6");
				// restore return address
				codeGenerator.put("move", "$ra", "$s7");

				/* move save register back to temp register */
				for(java.lang.String treg : tmpRegister.keySet()) {
					SymboltableEntry ste = tmpRegister.get(treg);
					// treg = ste.getReg
					codeGenerator.put("move", treg, ste.getReg());
					ste.setReg(treg);
				}
				
				/* move stack-content back to saver register */
				for(java.lang.String savereg : saveRegister.keySet()) {
					java.lang.String address = saveRegister.get(savereg);
					codeGenerator.put("lw", savereg, address + "($fp)");
				}
				
				for(SymboltableEntry ste : heapRef) {
					memoryManager.decreaseReferenceCount(ste.getHeap(), ste.getHeapsize());
				}
				
				return true;
			} else {
				return false;
			}
		} else {
			return false;
		}
	}
	
	public boolean isPrint(Keyword keyword) throws ParseException {
		if(keyword instanceof VISIBLE) {
			
			Keyword output = s.lookupToken();
			if(isStringOp(output)) {
				
				if(currentSymboltableEntry.getName().equals("IT")) {
					codeGenerator.put("addi", "$v0", "$zero", "4");
					codeGenerator.put("move", "$a0", "$v1");
					codeGenerator.put("lw", "$a0", "($a0)");
				} else if(currentSymboltableEntry.getCategory().equals("heap")) {
					if(currentSymboltableEntry.getReg() == null) {
						codeGenerator.put("addi", "$v0", "$zero", "4");
						codeGenerator.put("la", "$a0", currentSymboltableEntry.getHeap());
						codeGenerator.put("lw", "$a0", "($a0)");
					} else {
						codeGenerator.put("addi", "$v0", "$zero", "4");
						codeGenerator.put("move", "$a0", currentSymboltableEntry.getReg());
						codeGenerator.put("lw", "$a0", "($a0)");
					}
				} else if(currentSymboltableEntry.getCategory().equals("reg")) {
					codeGenerator.put("addi", "$v0", "$zero", "4");
					codeGenerator.put("move", "$a0", currentSymboltableEntry.getReg());
					codeGenerator.put("lw", "$a0", "($a0)");
				} else if(currentSymboltableEntry.getCategory().equals("var")) {
					/* address to heap is stored on stack 
					 * -> add content of stack into register 
					 * (this should be equivalent to loading the address)*/
					codeGenerator.put("addi", "$v0", "$zero", "4");
					// TODO: test whether relative address is ok
					codeGenerator.put("lw", "$a0", currentSymboltableEntry.getAddress() + "($fp)");
					codeGenerator.put("lw", "$a0", "($a0)");
				} else if(currentSymboltableEntry.getCategory().equals("const")) {
					StringLib.init(codeGenerator, memoryManager);
					StringLib.storeString(currentSymboltableEntry);
					codeGenerator.put("addi", "$v0", "$zero", "4");
					codeGenerator.put("la", "$a0", currentSymboltableEntry.getHeap());
					codeGenerator.put("lw", "$a0", "($a0)");
//					// TODO: assign and load address
//					int sizeOfStr = currentSymboltableEntry.getAttribute().length();
//					
//					int start = memoryManager.allocateMemory(sizeOfStr + 1);
//	//				codeGenerator.decreaseSp(wordAligned);
//					currentSymboltableEntry.setHeap("hp" + new Integer(start).toString());
//					int blockAmount = 0;
//					if(sizeOfStr % memoryManager.BLOCKSIZE != 0) {
//						blockAmount = ((int) (sizeOfStr / memoryManager.BLOCKSIZE)) +1;
//					} else {
//						blockAmount = (int)( sizeOfStr / memoryManager.BLOCKSIZE);
//					}
//					currentSymboltableEntry.setHeapsize(blockAmount);
//					currentSymboltableEntry.setCategory("heap");
//					codeGenerator.put("la", "$a0", "hp" + new Integer(start).toString());
				}
			} else if(isNumOp(output)) {
				
				codeGenerator.put("addi", "$v0", "$zero", "1");
				
				if(currentSymboltableEntry.getCategory().equals("reg")) {
					codeGenerator.put("move", "$a0", currentSymboltableEntry.getReg());
				} else if(currentSymboltableEntry.getCategory().equals("var")) {
					java.lang.String reg = codeGenerator.loadWord(currentSymboltableEntry.getAddress());
					codeGenerator.put("move", "$a0", reg);
					currentSymboltableEntry.setReg(reg);
					currentSymboltableEntry.setCategory("reg");
				} else if(currentSymboltableEntry.getCategory().equals("const")) {
					java.lang.String reg = 
							codeGenerator.loadImmediately(currentSymboltableEntry.getAttribute());
					codeGenerator.put("move", "$a0", reg);
					currentSymboltableEntry.setReg(reg);
					currentSymboltableEntry.setCategory("reg");
				}
			} else {
				ErrorReporter.markError("Expected a string");
			}
			codeGenerator.put("syscall");
			return true;
		}
		return false;
	}
	
	public boolean isGetline(Keyword keyword) throws ParseException {
		if(keyword instanceof GIMMEH) {
			Keyword lookahead = lookAhead();
			if(isIdentifier(lookahead)) {
				
				adjustSrcPointer();
				
				SymboltableEntry ste = symboltable.get(lookahead.getAttribute());
				if(ste != null) {
					if(ste.getType().equals(NUMBR.tokenId)) {
						codeGenerator.put("addi", "$v0", "$zero", "5");
						codeGenerator.put("syscall");
						if(ste.getCategory().equals("var")) {
							java.lang.String reg = codeGenerator.loadWord(ste.getAddress());
							ste.setReg(reg);
							ste.setCategory("reg");
						}
						codeGenerator.put("move", ste.getReg(), "$v0");
					} else if(ste.getType().equals(CHARZ.tokenId)) {
						codeGenerator.put("addi", "$v0", "$zero", "8");
						
						if(ste.getCategory().equals("var")) {
							java.lang.String reg = codeGenerator.loadWord(ste.getAddress());
							ste.setReg(reg);
						}
						
						if(ste.getHeap() == null) {
							int size = 256;
							int start = memoryManager.allocateMemory(size);
							java.lang.String heap = "hp" + new Integer(start);
							
							int blocks;
							if(size % memoryManager.BLOCKSIZE == 0) {
								blocks = size / memoryManager.BLOCKSIZE;
							} else {
								blocks = size / memoryManager.BLOCKSIZE + 1;
							}
							ste.setHeapsize(blocks);
							ste.setHeap(heap);
						}
						
						java.lang.String temp = codeGenerator.getNextFreeTemporary();
						codeGenerator.put("addi", "$a1", "$zero", new Integer(ste.getHeapsize() * memoryManager.BLOCKSIZE).toString());
						codeGenerator.put("la", temp, ste.getHeap());
						codeGenerator.put("lw", "$a0", "("+temp+")");
						
						codeGenerator.put("syscall");
					} else {
						ErrorReporter.markError("Cannot read variable of type " + ste.getType());
					}
					
				} else {
					ErrorReporter.markError("Variable " + 
							lookahead.getAttribute() + " was not declared");
				}
			} else {
				ErrorReporter.markError("Expected variable identifier");
			}
			return true;
		}
		return false;
	}

	/**
	 * Checks whether the keyword indicates the start 
	 * of an expression
	 * 
	 * @param keyword
	 * @return
	 * @throws SyntaxException
	 * @throws ParseException
	 */
	public boolean isExpr(Keyword keyword) throws ParseException {
		return (isBiExpr(keyword) || isInfExpr(keyword) );
				//|| isBool(keyword) || isIdentifier(keyword));
	}
